--- a/src/Soenneker.Cosmos.Database.csproj
+++ b/src/Soenneker.Cosmos.Database.csproj
@@ -36,9 +36,8 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
-
-        
-        <PackageReference Include="Soenneker.Cosmos.Database.Setup" Version="2.1.526" />
+        <PackageReference Include="Soenneker.Cosmos.Database.Setup" Version="2.1.529" />
+        <PackageReference Include="Soenneker.Extensions.Task" Version="2.1.50" />
         <PackageReference Include="Soenneker.Utils.SingletonDictionary" Version="2.1.253" />
     </ItemGroup>
 </Project>
