--- a/test/Soenneker.Cosmos.Database.Tests/Soenneker.Cosmos.Database.Tests.csproj
+++ b/test/Soenneker.Cosmos.Database.Tests/Soenneker.Cosmos.Database.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Cosmos.Database.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Cosmos.Database.csproj" />
     </ItemGroup>
 
 </Project>
